k8s/3-webstash-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstash-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstash-api-pod
  template:
    metadata:
      labels:
        app: webstash-api-pod
    spec:
      containers:
        - name: webstash
          image: akashpal14/webstash-back-jib
          ports:
            - containerPort: 8080
