k8s/4-webstash-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: webstash-ui-svc
spec:
  type: NodePort
  selector:
    app: webstash-ui-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstash-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstash-ui-pod
  template:
    metadata:
      labels:
        app: webstash-ui-pod
    spec:
      containers:
        - name: webstash-ui
          image: akashpal14/webstash-ui-nextjs
          ports:
            - containerPort: 3000
