k8s/5-ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webstash-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:

    - http:
        paths:
          - pathType: Prefix
            path: /webstash-api(/|$)(.*)
            backend:
              service:
                name: webstash-api-svc
                port:
                  number: 8080

#http://localhost:80/webstash-api/api/bookmarks
