k8s/6-ingress-ui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webstash-ui-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webstash-ui-svc
                port:
                  number: 3000
